NetworkingPolicies/BlockAllTrafficNS.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-traffic-prod
  namespace: prod
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-traffic-dev
  namespace: dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-traffic-qa
  namespace: qa
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
