NetworkingPolicies/DenyTrafficInsideNS.yaml
kubectl run trouble1 --image=balatuluva/troubleshootingtools:v1 -n default
kubectl run trouble2 --image=balatuluva/troubleshootingtools:v1 -n default

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: trouble1
  policyTypes:
    - Ingress

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-egress
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: trouble1
  policyTypes:
    - Egress

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-ingress-egress
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: trouble1
  policyTypes:
    - Ingress
    - Egress
